optimized images, css adjustments, minified js and css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
         <title>bok, bok. - Design portfolio of Katarina Dijakovic</title>
-        <link rel="stylesheet" href="assets/css/style.css?v=130918">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700,900">
+        <link rel="stylesheet" href="assets/css/style.min.css?v=130918">
         <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
         <link rel="apple-touch-icon" href="assets/icons/apple-57.png">
         <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-72.png">
@@ -56,7 +57,9 @@
             <section id="experience">
                 <div class="container">
                     <h2>Experience</h2>
-                    <p class="intro">As a designer I'm focused on human-centered design and quality user experiences that are reflected through beautiful user interfaces and great usability. My roots are in print, typography, graphics technology and branding.</p>
+                    <div class="intro">
+                        <p>As a designer I'm focused on human-centered design and quality user experiences that are reflected through beautiful user interfaces and great usability. My roots are in print, typography, graphics technology and branding.</p>
+                    </div>
                     <div class="timeline-container">
                         <div class="groups">
                             <p class="work-group">Work & Education</p>
@@ -176,7 +179,9 @@
             <section id="work">
                 <div class="container">
                     <h2>Work</h2>
-                    <p class="intro">You know what they say - quality over quantity. Even though there were many projects, these ones are a good example of the type of work and dedication done consistently.</p>
+                    <div class="intro">
+                        <p>You know what they say - quality over quantity. Even though there were many projects, these ones are a good example of the type of work and dedication done consistently.</p>
+                    </div>
                     <div class="work work-left shape-circle-left">
                         <div class="work-screen">
                             <picture>
@@ -266,7 +271,9 @@
             <section id="recommendations">
                 <div class="container">
                     <h2>Recommendations</h2>
-                    <p class="intro">A few words from some of my favourite people I've been fortunate enough to collaborate with.</p>
+                    <div class="intro">
+                        <p>A few words from some of my favourite people I've been fortunate enough to collaborate with.</p>
+                    </div>
                     <blockquote>
                         <p class="quote">A few words from some of my favourite people I've been fortunate enough to collaborate with. A few words from some of my favourite people I've been fortunate enough to collaborate with.</p>
                         <footer class="author">
@@ -280,29 +287,31 @@
             <section id="articles">
                 <div class="container">
                     <h2>Articles</h2>
-                    <p class="intro">A few articles on different work methods and experiences in using different design tools</p>
+                    <div class="intro">
+                        <p>A few articles on different work methods and experiences in using different design tools.</p>
+                    </div>
                     <div class="article-wrapper">
                         <article class="featured-article full-width">
-                            <h3><a href="#">The process of improving online store usability and design your customers will enjoy</a></h3>
+                            <h3><a target="_blank" href="https://inchoo.net/ux-ui-design/the-process-of-improving-online-store-usability-and-design-your-customers-will-enjoy/">The process of improving online store usability and design your customers will enjoy</a></h3>
                             <p class="article-intro">Design doesn't just paint the building, it builds the stairs to an overall better usability and collaboration of everyone included.</p>
-                            <a href="#" class="button-link">Read More</a>
+                            <a target="_blank" href="https://inchoo.net/ux-ui-design/the-process-of-improving-online-store-usability-and-design-your-customers-will-enjoy/" class="button-link">Read More</a>
                         </article>
                         <ul class="article-list">
                             <li>
                                 <article>
-                                    <h4><a href="#">Version control systems in UI design</a></h4>
-                                    <p class="article-intro">1. What works in a multi-player, single-file scenario? Symbols, libraries or version control systems?</p>
+                                    <h4><a target="_blank" href="https://inchoo.net/ux-ui-design/version-control-systems-ui-design/">Version control systems in UI design</a></h4>
+                                    <p class="article-intro">What works in a multi-player, single-file scenario? Symbols, libraries or version control systems?</p>
                                 </article>
                             </li>
                             <li>
                                 <article>
-                                    <h4><a href="#">Wireframing a successful design for your online store</a></h4>
+                                    <h4><a target="_blank" href="https://inchoo.net/ux-ui-design/wireframing-successful-design-online-store/">Wireframing a successful design for your online store</a></h4>
                                     <p class="article-intro">Wireframes are the ones that enable us to focus on glorious typography and brilliant color schemes.</p>
                                 </article>
                             </li>
                             <li>
                                 <article>
-                                    <h4><a href="#">The practical value of Design Thinking</a></h4>
+                                    <h4><a target="_blank" href="https://inchoo.net/ux-ui-design/practical-value-of-design-thinking/">The practical value of Design Thinking</a></h4>
                                     <p class="article-intro">The end user is what this thinking perspective is all about. A far cry from the mere visual creation of design elements.</p>
                                 </article>
                             </li>
@@ -335,6 +344,6 @@
             </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="assets/scripts/main.js?v=130918"></script>
+        <script src="assets/scripts/main.min.js?v=130918"></script>
     </body>
 </html>
