--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
         <title>bok, bok. - Design portfolio of Katarina Dijakovic</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700,900">
-        <link rel="stylesheet" href="assets/css/style.min.css?v=130918">
+        <link rel="stylesheet" href="assets/css/style.min.css?v=160918">
         <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
         <link rel="apple-touch-icon" href="assets/icons/apple-57.png">
         <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-72.png">
@@ -345,5 +345,27 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="assets/scripts/main.min.js?v=130918"></script>
+
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68016637-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-68016637-2');
+        </script>
+
+        <!-- Hotjar Tracking Code -->
+        <script>
+            (function(h,o,t,j,a,r){
+                h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+                h._hjSettings={hjid:1016105,hjsv:6};
+                a=o.getElementsByTagName('head')[0];
+                r=o.createElement('script');r.async=1;
+                r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+                a.appendChild(r);
+            })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        </script>
     </body>
 </html>
