conco footer update, text update

--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
                 <div class="container">
                     <h2>Recommendations</h2>
                     <div class="intro">
-                        <p>A few words from some of my favourite people I've been fortunate enough to collaborate with.</p>
+                        <p>A few words from some of my favorite people I've been fortunate enough to collaborate with.</p>
                     </div>
                     <blockquote>
-                        <p class="quote">A few words from some of my favourite people I've been fortunate enough to collaborate with. A few words from some of my favourite people I've been fortunate enough to collaborate with.</p>
+                        <p class="quote">A few words from some of my favorite people I've been fortunate enough to collaborate with. A few words from some of my favorite people I've been fortunate enough to collaborate with.</p>
                         <footer class="author">
-                            <h3>Jonathan Maloy</h3>
-                            <p>Vice President of Technology, KEH Inc.</p>
-                            <p class="text-small">Word's largest pre-owned camera store</p>
+                            <h3>John Doe</h3>
+                            <p>CEO, Doe Enterprise.</p>
+                            <p class="text-small">Word's largest enterprise store</p>
                         </footer>
                     </blockquote>
                 </div>
