--- a/index.html
+++ b/index.html
@@ -275,11 +275,10 @@
                         <p>A few words from some of my favorite people I've been fortunate enough to collaborate with.</p>
                     </div>
                     <blockquote>
-                        <p class="quote">A few words from some of my favorite people I've been fortunate enough to collaborate with. A few words from some of my favorite people I've been fortunate enough to collaborate with.</p>
+                        <p class="quote">Simply put - Katarina is well rounded professional. Now that this is out of the way, I can say that she always delivered before the deadlines, that she is communicative person and that she does her research. But that can be seen on any and every designer. What Katarina have is a passion towards learning, researching and upgrading her knowledge with every new project. Constantly questioning, analyzing and testing her processes helps her to ask the right questions. Questions that later prove to be of help during designs and questions that eliminate non-viable choices from the very start. Having a mindset like that with her growing skillset and enthusiasm is what makes her unique and well rounded professional.</p>
                         <footer class="author">
-                            <h3>John Doe</h3>
-                            <p>CEO, Doe Enterprise.</p>
-                            <p class="text-small">Word's largest enterprise store</p>
+                            <h3>Dino Balen</h3>
+                            <p>Designer/Former Team Leader</p>
                         </footer>
                     </blockquote>
                 </div>
