owl carousel, h2 before fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
         <title>bok, bok. - Design portfolio of Katarina Dijakovic</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karla:400,700|Playfair+Display:700,900">
-        <link rel="stylesheet" href="assets/css/style.min.css?v=160918">
+        <link rel="stylesheet" href="assets/css/style.min.css?v=201018">
         <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
         <link rel="apple-touch-icon" href="assets/icons/apple-57.png">
         <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-72.png">
@@ -274,13 +274,22 @@
                     <div class="intro">
                         <p>A few words from some of my favorite people I've been fortunate enough to collaborate with.</p>
                     </div>
-                    <blockquote>
-                        <p class="quote">Simply put - Katarina is well rounded professional. Now that this is out of the way, I can say that she always delivered before the deadlines, that she is communicative person and that she does her research. But that can be seen on any and every designer. What Katarina have is a passion towards learning, researching and upgrading her knowledge with every new project. Constantly questioning, analyzing and testing her processes helps her to ask the right questions. Questions that later prove to be of help during designs and questions that eliminate non-viable choices from the very start. Having a mindset like that with her growing skillset and enthusiasm is what makes her unique and well rounded professional.</p>
-                        <footer class="author">
-                            <h3>Dino Balen</h3>
-                            <p>Designer/Former Team Leader</p>
-                        </footer>
-                    </blockquote>
+                    <div class="owl-carousel owl-theme">
+                        <blockquote class="item">
+                            <p class="quote">After working with Katarina on the Zee & Co project, I have no hesitation in recommending her. Katarina's creativity and desire to meet customer expectations make her the perfect Digital Designer. From the very beginning Katarina took time to establish our requirements, answered all of my questions and came through with lovely designs with some perfect finishing touche</p>
+                            <footer class="author">
+                                <h3>Joann Johnstone</h3>
+                                <p>Operations Director @ Zee & Co Ltd</p>
+                            </footer>
+                        </blockquote>
+                        <blockquote class="item">
+                            <p class="quote">Simply put - Katarina is well rounded professional. Now that this is out of the way, I can say that she always delivered before the deadlines, that she is communicative person and that she does her research. But that can be seen on any and every designer. What Katarina have is a passion towards learning, researching and upgrading her knowledge with every new project. Constantly questioning, analyzing and testing her processes helps her to ask the right questions. Questions that later prove to be of help during designs and questions that eliminate non-viable choices from the very start. Having a mindset like that with her growing skillset and enthusiasm is what makes her unique and well rounded professional.</p>
+                            <footer class="author">
+                                <h3>Dino Balen</h3>
+                                <p>Designer/Former Team Leader</p>
+                            </footer>
+                        </blockquote>
+                    </div>
                 </div>
             </section>
             <section id="articles">
@@ -343,7 +352,8 @@
             </footer>
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="assets/scripts/main.min.js?v=130918"></script>
+        <script src="assets/scripts/owl.carousel.min.js"></script>
+        <script src="assets/scripts/main.min.js?v=201018"></script>
 
         <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68016637-2"></script>
@@ -351,7 +361,6 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-
             gtag('config', 'UA-68016637-2');
         </script>
 
