--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="container">
                     <h2>Experience</h2>
                     <div class="intro">
-                        <p>As a designer I'm focused on human-centered design and quality user experiences that are reflected through beautiful user interfaces and great usability. My roots are in print, typography, graphics technology and branding.</p>
+                        <p>As a designer I'm focused on human-centred design and quality user experiences that are reflected through beautiful user interfaces and great usability. My roots are in print, typography, graphics technology and branding.</p>
                     </div>
                     <div class="timeline-container">
                         <div class="groups">
