--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <h1>bok, <span>bok.</span></h1>
                         </div>
                         <div class="title-desc">
-                            <p><strong>bok, bok.*</strong> is the portfolio of Katarina Dijakovic, a digital designer from Croatia.</p>
+                            <p><strong>bok, bok.*</strong> is the portfolio of Katarina Dijakovic, a UI/UX designer from Croatia.</p>
                             <p>I believe in making data-based decisions, in-depth problem solving, the value of aesthetics and the importance of quality communication.</p>
                             <p class="text-small explanation">*bok is the Croatian word for hello!</p>
                         </div>
