Recommendation text update

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     </div>
                     <div class="owl-carousel owl-theme">
                         <blockquote class="item">
-                            <p class="quote">After working with Katarina on the Zee & Co project, I have no hesitation in recommending her. Katarina's creativity and desire to meet customer expectations make her the perfect Digital Designer. From the very beginning Katarina took time to establish our requirements, answered all of my questions and came through with lovely designs with some perfect finishing touche</p>
+                            <p class="quote">After working with Katarina on the Zee & Co project, I have no hesitation in recommending her. Katarina's creativity and desire to meet customer expectations make her the perfect Digital Designer. From the very beginning Katarina took time to establish our requirements, answered all of my questions and came through with lovely designs with some perfect finishing touches.</p>
                             <footer class="author">
                                 <h3>Joann Johnstone</h3>
                                 <p>Operations Director @ Zee & Co Ltd</p>
