Change in The Design Process CTA label

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                     <p>Jun 2016 – Jun 2017</p>
                                 </div>
                                 <p class="desc">Creating a user interface based on in-depth knowledge of the business and its customer's needs through a human-centered approach and design thinking principles.</p>
-                                <a target="_blank" href="https://www.behance.net/collection/170671287/Design-Process" class="button-main">View The Project</a>
+                                <a target="_blank" href="https://www.behance.net/collection/170671287/Design-Process" class="button-main">View The Projects</a>
                             </div>
                         </div>
                     </div>
