--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                             </li>
                             <li class="left">
                                 <div class="time">
-                                    <p class="year-range"><strong>2015 - present</strong></p>
-                                    <p class="duration">3 yrs 4 mo</p>
+                                    <p class="year-range"><strong>2015 - 2019</strong></p>
+                                    <p class="duration">3 yrs 6 mo</p>
                                 </div>
                                 <div class="info">
                                     <p>Inchoo - full service ecommerce agency</p>
