New quote added

--- a/index.html
+++ b/index.html
@@ -289,6 +289,13 @@
                                 <p>Designer/Former Team Leader</p>
                             </footer>
                         </blockquote>
+                        <blockquote class="item">
+                            <p class="quote">After working with Katarina for two years, I can honestly say she's very talented and skilled designer. A true and passionate artist that brings interfaces to a whole different level.</p>
+                            <footer class="author">
+                                <h3>Zoran Vorkapic</h3>
+                                <p>Designer</p>
+                            </footer>
+                        </blockquote>
                     </div>
                 </div>
             </section>
