article intro crops text on line 3 in mobile

--- a/index.html
+++ b/index.html
@@ -308,10 +308,17 @@
                     <div class="article-wrapper">
                         <article class="featured-article full-width">
                             <h3><a target="_blank" href="https://inchoo.net/ux-ui-design/the-process-of-improving-online-store-usability-and-design-your-customers-will-enjoy/">The process of improving online store usability and design your customers will enjoy</a></h3>
-                            <p class="article-intro">Design doesn't just paint the building, it builds the stairs to an overall better usability and collaboration of everyone included.</p>
+                            <p class="article-intro">The only point of contact your customer has with your online store, is the designed interface. Ever wondered exactly what they think of it? Long gone are the days when the design was purely a visual discipline. It shifted into a responsibility, where designers are also to be valued for their understanding of the product being built. Design doesn’t just paint the building, it builds the stairs to an overall better usability and collaboration of everyone included. It is necessary to update our processes with thorough understanding of end users, colleagues and stakeholders to make responsible and risk-reduced design decisions. Change through user testing is what keeps the design process relevant and competitive.</p>
                             <a target="_blank" href="https://inchoo.net/ux-ui-design/the-process-of-improving-online-store-usability-and-design-your-customers-will-enjoy/" class="button-link">Read More</a>
                         </article>
                         <ul class="article-list">
+                            <li>
+                                <article>
+                                    <h4><a target="_blank" href="https://inchoo.hr/roi-dizajna/">Povrat investicije (ROI) u dizajnu</a></h4>
+                                    <p class="tag">HR</p>
+                                    <p class="article-intro">Povrat investicije (ROI) u dizajnu je pojam o kojem je bitno pričati kao takvom jer je o samom dizajnu bitno pričati kao o jednom od pridonositelja konačnim rezultatima projekta. Što točno znači stvoriti vrijednost dizajnom?</p>
+                                </article>
+                            </li>
                             <li>
                                 <article>
                                     <h4><a target="_blank" href="https://inchoo.net/ux-ui-design/version-control-systems-ui-design/">Version control systems in UI design</a></h4>
