--- a/index.html
+++ b/index.html
@@ -235,10 +235,10 @@
                                 <h3>The UI</h3>
                                 <div class="work-details">
                                     <p>UI/UX Designer/Project Manager</p>
-                                    <p>Mar 2017 – May 2017</p>
+                                    <p>Mar 2017 – Jan 2019</p>
                                 </div>
-                                <p class="desc">Creating a user interface and a design system through an atomic design approach to support a new online store solution.</p>
-                                <a target="_blank" href="https://www.behance.net/gallery/63855951/Pavement-Ends-online-store-design" class="button-main">View The Project</a>
+                                <p class="desc">Creating user interfaces and design systems through an atomic design approach to support a new online store solution or other responsive design solutions.</p>
+                                <a target="_blank" href="https://www.behance.net/collection/170243119/UI" class="button-main">View The Projects</a>
                             </div>
                         </div>
                     </div>
