Adding Martian employment

--- a/index.html
+++ b/index.html
@@ -168,6 +168,17 @@
                                     <a target="_blank" href="https://hr.meet-magento.com/en/speaker/katarina-dijakovic" class="button-link">View Details</a>
                                 </div>
                             </li>
+                             <li class="left">
+                                <div class="time">
+                                    <p class="year-range"><strong>2019 - 2019</strong></p>
+                                    <p class="duration">2 mo</p>
+                                </div>
+                                <div class="info">
+                                    <p>Martian & Machine</p>
+                                    <h4>Senior UI/UX Designer</h4>
+                                    <p class="location">Zagreb, Croatia</p>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                     <div class="more">
