Update on M&M working period

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                             </li>
                              <li class="left">
                                 <div class="time">
-                                    <p class="year-range"><strong>2019 - 2019</strong></p>
-                                    <p class="duration">2 mo</p>
+                                    <p class="year-range"><strong>2019 - present</strong></p>
+                                    <p class="duration">3 mo</p>
                                 </div>
                                 <div class="info">
                                     <p>Martian & Machine</p>
