--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                              <li class="left">
                                 <div class="time">
                                     <p class="year-range"><strong>2019 - present</strong></p>
-                                    <p class="duration">6 mo</p>
+                                    <p class="duration">1 yr 2 mo</p>
                                 </div>
                                 <div class="info">
                                     <p>Martian & Machine</p>
